// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arguments.length > 3 1`] = `"Too much arguments passed to splitSmartly function!!!"`;

exports[`arguments.length 0 1`] = `"empty arguments"`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: '(), << >>' }
] 1`] = `
[
  "(one / two) / "three / four" / <<five / six>>",
  "/",
  {
    "brackets": "(), << >>",
  },
]
`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: [ [Array], [Array] ] }
] 1`] = `
[
  "(one / two) / "three / four" / <<five / six>>",
  "/",
  {
    "brackets": [
      [
        "(",
        ")",
      ],
      [
        "<<",
        ">>",
      ],
    ],
  },
]
`;

exports[`demos [
  '(one / two) / "three / four" / <<five / six>>',
  '/',
  { brackets: { '(': ')', '<<': '>>' } }
] 1`] = `
[
  "(one / two) / "three / four" / <<five / six>>",
  "/",
  {
    "brackets": {
      "(": ")",
      "<<": ">>",
    },
  },
]
`;

exports[`demos [
  'Peter loves Mary and Mary loves Johnny and Jonny loves Steve',
  'AND',
  { mentions: [ 'STEVE', 'PETER' ] }
] 1`] = `
[
  "Peter loves Mary and Mary loves Johnny and Jonny loves Steve",
  "AND",
  {
    "mentions": [
      "STEVE",
      "PETER",
    ],
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'ONLY' }
] 1`] = `
[
  "SELECT best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {
    "includeSeparatorMode": "ONLY",
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT' }
] 1`] = `
[
  "SELECT best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  'SELECT best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'SEPARATELY' }
] 1`] = `
[
  "SELECT best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {
    "includeSeparatorMode": "SEPARATELY",
  },
]
`;

exports[`demos [
  'select best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT' }
] 1`] = `
[
  "select best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  'select best FROM life',
  [ 'SELECT ', 'FROM ' ],
  { includeSeparatorMode: 'RIGHT', ignoreCase: false }
] 1`] = `
[
  "select best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {
    "ignoreCase": false,
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [
  {
    brackets: [],
    mentions: [],
    ignoreInsideQuotes: true,
    includeSeparatorMode: 'NONE',
    ignoreCase: true,
    trimResult: true,
    trimSeparators: false,
    defaultBrackets: [ [Array], [Array], [Array] ]
  }
] 1`] = `
[
  null,
  ",",
  {
    "brackets": [],
    "defaultBrackets": [
      [
        "(",
        ")",
      ],
      [
        "[",
        "]",
      ],
      [
        "{",
        "}",
      ],
    ],
    "ignoreCase": true,
    "ignoreInsideQuotes": true,
    "includeSeparatorMode": "NONE",
    "mentions": [],
    "trimResult": true,
    "trimSeparators": false,
  },
]
`;

exports[`demos [ 'One | Two | Three | Four', '|', { indexes: [ 1, 3 ] } ] 1`] = `
[
  "One | Two | Three | Four",
  "|",
  {
    "indexes": [
      1,
      3,
    ],
  },
]
`;

exports[`demos [ 'One | Two | Three | Four', '|', { indexes: 2 } ] 1`] = `
[
  "One | Two | Three | Four",
  "|",
  {
    "indexes": 2,
  },
]
`;

exports[`demos [ 'SELECT best FROM life', [ 'SELECT ', 'FROM ' ] ] 1`] = `
[
  "SELECT best FROM life",
  [
    "SELECT ",
    "FROM ",
  ],
  {},
]
`;

exports[`demos [ 'one , two , "three , four" , five , six' ] 1`] = `
[
  "one , two , "three , four" , five , six",
  ",",
  {},
]
`;

exports[`demos [ 'one _ two _ "three _ four" _ five _ six', '_' ] 1`] = `
[
  "one _ two _ "three _ four" _ five _ six",
  "_",
  {},
]
`;

exports[`demos [ 'one _ two _ "three _ four" _ five _ six', '_', { brackets: true } ] 1`] = `
[
  "one _ two _ "three _ four" _ five _ six",
  "_",
  {
    "brackets": true,
  },
]
`;

exports[`demos [ 'p1: point first p2: point second', /p\\d:/gi ] 1`] = `
[
  "p1: point first p2: point second",
  /p\\\\d:/gi,
  {},
]
`;

exports[`demos [ [ 'SELECT ', 'FROM ' ] ] 1`] = `
[
  null,
  [
    "SELECT ",
    "FROM ",
  ],
  {},
]
`;

exports[`demos [ { includeSeparatorMode: 'RIGHT', ignoreCase: false } ] 1`] = `
[
  null,
  ",",
  {
    "ignoreCase": false,
    "includeSeparatorMode": "RIGHT",
  },
]
`;

exports[`demos [ {} ] 1`] = `
[
  null,
  ",",
  {},
]
`;
